# repomap

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: repomap.mdc
repomap-extension/: .vscodeignore  README.md  esbuild.js  graph_export.py  package-lock.json  package.json  proxy.js  repomap-extension-0.1.0.vsix  run_tool.py
repomap-extension/media/: graph.html  styles.css
repomap-extension/src/: EventWatcher.ts  GraphPanelProvider.ts  LiveViewProvider.ts  extension.ts  types.ts
src/repomap/: __init__.py  config.py  formatter.py  graph.py  parser.py  policy.py  server.py
tests/: test_formatter.py  test_graph.py  test_graph_extended.py  test_parser.py  test_parser_extended.py  test_policy.py  test_policy_extended.py  test_server.py
tests/fixtures/mock_saas/src/: index.ts
tests/fixtures/mock_saas/src/components/: CheckoutModal.tsx  InvoicePage.tsx
tests/fixtures/mock_saas/src/db/: queries.ts  schema.prisma
tests/fixtures/mock_saas/src/routes/: checkout.ts  webhooks.ts
tests/fixtures/mock_saas/src/services/: attribution_service.ts  billing_service.ts  user_service.ts
tests/fixtures/mock_saas/src/utils/: date_utils.ts  format_helpers.ts
